--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "talon-one/TalonOnePHPSdk",
+    "name": "talon-one/talon-one-client",
     "type": "library",
     "version": "3.0.0",
     "description": "The Talon.One API is used to manage applications and campaigns, as well as to integrate with your application. The operations in the _Integration API_ section are used to integrate with our platform, while the other operations are used to manage applications and campaigns.",
@@ -12,6 +12,13 @@
     ],
     "homepage": "https://developers.talon.one/SDKs/PHP",
     "license": "MIT",
+    "authors": [
+        {
+            "name": "Talon.One Developers",
+            "email": "devs@talon.one",
+            "homepage": "https://developers.talon.one"
+        }
+    ],
     "require": {
         "php": ">=7.1",
         "ext-curl": "*",
