--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "ext-curl": "*",
         "ext-json": "*",
         "ext-mbstring": "*",
-        "guzzlehttp/guzzle": ">= 5.3"
+        "guzzlehttp/guzzle": ">=5.3 <7.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.4",
