--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "guzzlehttp/guzzle": ">= 5.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.4",
+        "php": ">=7.1",
         "squizlabs/php_codesniffer": "~2.6",
         "friendsofphp/php-cs-fixer": "~2.12"
     },
