--- a/composer.json
+++ b/composer.json
@@ -24,17 +24,21 @@
         "ext-curl": "*",
         "ext-json": "*",
         "ext-mbstring": "*",
-        "guzzlehttp/guzzle": "^7"
+        "guzzlehttp/guzzle": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.4",
-        "squizlabs/php_codesniffer": "~2.6",
-        "friendsofphp/php-cs-fixer": "~2.12"
+        "phpunit/phpunit": "*",
+        "squizlabs/php_codesniffer": "*",
+        "friendsofphp/php-cs-fixer": "*"
     },
     "autoload": {
-        "psr-4": { "TalonOne\\Client\\" : "lib/" }
+        "psr-4": {
+            "TalonOne\\Client\\": "lib/"
+        }
     },
     "autoload-dev": {
-        "psr-4": { "TalonOne\\Client\\" : "test/" }
+        "psr-4": {
+            "TalonOne\\Client\\": "test/"
+        }
     }
 }
